<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Metronom</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_icon">Settings</string>
    <string name="actionBarTitle">Metronome</string>
    <string name="preferenceCategoryOne">Display</string>
    <string name="preferenceCategoryTwo">Sounds and vibration</string>
    <string name="preferenceCategoryThree">Language</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="darkThemeSummary">Change interface colors to dark</string>
    <string name="soundEffect">Change metronome sound effect</string>
    <string name="soundEffectSummary">Choose one of the metronome sound effects from the list</string>
    <string name="changeLanguage">Change language</string>
    <string name="changeLanguageSummary">Select language to change</string>
    <string name="flashAnimation">Screen flash on tick</string>
    <string name="flashAnimationSummary">Toggle screen blink effect when metronome makes one tick</string>
    <string name="performerTitle">Performer - Title</string>
    <string name="soundOne">Sound 1</string>
    <string name="soundTwo">Sound 2</string>
    <string name="soundThree">Sound 3</string>
    <string name="soundFour">Sound 4</string>
    <string name="soundFive">Sound 5</string>
    <string name="english">English</string>
    <string name="polish">Polski</string>
    <string name="german">Deutsch</string>
    <string name="storagePermGranted">Storage permission granted. Please press the import button again</string>
    <string name="baseImpSuccess">Database imported successfully! Tap again to hide imported songs</string>
    <string name="cantImpData">Data cannot be imported. The file either does not exist or is misnamed or formatted incorrectly</string>
    <string name="cantReadStorage">Cannot read from external storage</string>
    <string name="permissionInfo">You must grant storage permission to import data</string>
    <string name="holdToReset">Hold tap button to reset counter</string>
    <string name="allowPermission">Select \"Allow management of all files\" to grant database reading permissions</string>
    <string name="tapReset">Tap counter has been reset</string>
    <string name="baseHidden">Database has been closed</string>
    <string name="exceededBpmRange">Illegal BPM value. Please set the BPM value between 1 and 300.</string>
    <string name="exitApplicationTitle">Closing application</string>
    <string name="exitApplicationMessage">Are you sure you want to exit the application?</string>
    <string name="exitApplicationYes">Yes</string>
    <string name="exitApplicationNo">No</string>
    <string name="databaseExists">Database already exists!</string>
    <string name="databaseGenerated">Database generated in Download folder. You can edit it to add your own songs</string>
    <string name="permToRecord">Please grant permissions to record audio</string>
    <string name="audioPermDenied">Permissions denied to record audio</string>
    <string name="storageNotRead">External storage is not readable</string>
    <string name="vibrationsOnTickSummary">Enable or disable vibration function on metronome tick</string>
    <string name="flashlightOnTick">Flashlight on tick</string>
    <string name="flashlightOnTickSummary">Turn on/off flashlight on metronome tick</string>
    <string name="noFlashOnDevice">No flashlight available on your device</string>
    <string name="vibrationsOnTick">Vibrations on tick</string>
</resources>